examples: make builds in examples dependent on ddpg (for testing)
Signed-off-by: Peter Williams <pwil3058@gmail.com>

--- a/examples/evaluater/Makefile
+++ b/examples/evaluater/Makefile
@@ -1,5 +1,5 @@
 calc: evaluator.d parser.d
 	dmd -I../.. evaluator.d parser.d ../../ddlib/lexan.d ../../ddlib/templates.d
 
-parser.d: parser.ddgs
+parser.d: parser.ddgs ../../ddpg
 	../../ddpg -f parser.ddgs
