--- a/examples/calc/Makefile
+++ b/examples/calc/Makefile
@@ -1,5 +1,5 @@
 calc: calc.d parser.d
 	dmd -I../.. calc.d parser.d ../../ddlib/lexan.d ../../ddlib/templates.d
 
-parser.d: parser.ddgs
+parser.d: parser.ddgs ../../ddpg
 	../../ddpg -f parser.ddgs
