--- a/examples/calc2/Makefile
+++ b/examples/calc2/Makefile
@@ -1,5 +1,5 @@
 calc: calc.d parser.d
-	dmd -I../.. calc.d parser.d ../../ddlib/lexan.d ../../ddlib/templates.d
+	dmd -I../.. calc.d parser.d ../../../ddlb/lexan.d ../../../ddlb/templates.d
 
 parser.d: parser.ddgs ../../ddpg
 	../../ddpg -f --states=parser.states --expect=1 parser.ddgs
